# ohos_ijkplayer

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  NOTICE  OAT.xml  README-EN.md  README.OpenSource  README.en.md  README.md  README_zh.md  build-profile.json5  oh-package.json5  package.json  prebuild.sh
.github/workflows/: build-subtitle.yml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
doc/FFmpeg/: BUILD.gn  bundle.json  configure  ohos_ijkffmpeg_config.sh
doc/libyuv-ijk/: CMakeLists.txt  HPKBUILD
doc/soundtouch/: CMakeLists.txt
doc/soundtouch-ijk/: HPKBUILD  soundtouch_config.h
entry/: .gitignore  build-profile.json5  obfuscation-rules.txt  oh-package.json5  package-lock.json  package.json
entry/src/main/: module.json5
entry/src/main/ets/Application/: AbilityStage.ts
entry/src/main/ets/ListView/: BasePlayer.ets  CommonVideoView.ets  IjkPlayer.ets  PlayerListener.ets  VideoNewsView.ets  VideoPlayer.ets  VideoSource.ets  playerInterface.ets
entry/src/main/ets/MainAbility/: MainAbility.ts
entry/src/main/ets/entryability/: EntryAbility.ts
entry/src/main/ets/pages/: IjkAudioPlayerNavigationComponent.ets  IjkVideo10BitPlayerPage.ets  IjkVideoPlayerNavigationComponent.ets  IjkVideoPlayerNavigationExample.ets  IjkVideoPlayerPage.ets  IjkplayerMapManager.ts  RouterParam.ets  SampleAudioListPage.ets  SampleVideoListPage.ets  index.ets
entry/src/main/ets/pages/typeNode/: IjkVideoPlayerNavigationTypeNodeComponent.ets  IjkVideoPlayerPipIndex.ets  IjkVideoPlayerPipPage.ets  IjkVideoPlayerTypeNodeIndex.ets  IjkVideoPlayerTypeNodeNavigationExample.ets  IjkVideoPlayerTypeNodePage.ets  PipManager.ets  PipOnActionEventCallBack.ets  XComponentLoadCallBack.ets  XComponentNodeController.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json  router_map.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
entry/src/ohosTest/: module.json5
entry/src/ohosTest/ets/test/: Ability.test.ets
entry/src/ohosTest/ets/testability/: TestAbility.ets  TestAbility.ts
entry/src/ohosTest/ets/testability/pages/: Index.ets
entry/src/ohosTest/ets/testrunner/: OpenHarmonyTestRunner.ts
hvigor/: hvigor-config.json5
ijkplayer/: .gitignore  BuildProfile.ets  build-profile.json5  index.ets  oh-package.json5  package-lock.json  package.json
ijkplayer/src/main/: module.json5
ijkplayer/src/main/cpp/: CMakeLists.txt  npmlib.cpp
ijkplayer/src/main/cpp/ijkplayer/: CMakeLists.txt  config.h  ff_ffinc.h  ff_ffmsg.h  ff_ffmsg_queue.h  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ff_ffplay_options.h  ijkplayer.c  ijkplayer.h  ijkplayer_android.c  ijkplayer_android_def.h  ijkplayer_internal.h
ijkplayer/src/main/cpp/ijkplayer/ijkavformat/: ijkasync.c  ijkio.c  ijkiocache.c  ijkiourlhook.c  ijklivehook.c  ijklongurl.c  ijksegment.c  ijkurlhook.c
ijkplayer/src/main/cpp/ijkplayer/ijkavutil/: ijkdict.c  ijkdict.h  ijkfifo.c
ijkplayer/src/main/cpp/ijkplayer/ohos/: Player.cpp  Player.h  demuxer.cpp  demuxer.h  ffpipenode_ohos_mediacodec_vdec.cpp  ffpipenode_ohos_mediacodec_vdec.h  ohos_video_decoder.cpp  ohos_video_decoder.h  ohos_video_decoder_Info.cpp  ohos_video_decoder_Info.h  ohos_video_decoder_data.cpp  ohos_video_decoder_data.h  sample_callback.cpp  sample_callback.h  sample_info.h  video_decoder.cpp  video_decoder.h
ijkplayer/src/main/cpp/ijkplayer/ohos/dfx/error/: av_codec_sample_error.h
ijkplayer/src/main/cpp/ijkplayer/ohos/dfx/log/: av_codec_sample_log.h
ijkplayer/src/main/cpp/ijkplayer/pipeline/: ffpipeline_android.c  ffpipeline_android.h
ijkplayer/src/main/cpp/ijkplayer/record/: ijkplayer_record.cpp  ijkplayer_record.h
ijkplayer/src/main/cpp/ijksdl/: CMakeLists.txt  ijksdl_aout_internal.h  ijksdl_container.h  ijksdl_egl.c  ijksdl_mutex.c  ijksdl_thread.c  ijksdl_timer.c  ijksdl_vout.c
ijkplayer/src/main/cpp/ijksdl/audio/: ijksdl_aout_android_opensles.c  ijksdl_aout_android_opensles.h
ijkplayer/src/main/cpp/ijksdl/ffmpeg/: ijksdl_vout_overlay_ffmpeg.c
ijkplayer/src/main/cpp/ijksdl/video/: ijksdl_vout_android_nativewindow.c
ijkplayer/src/main/cpp/ijksdl/video/gles2/: internal.h  renderer.c  renderer_yuv420sp.c  shader.c
ijkplayer/src/main/cpp/napi/: ijkplayer_napi.cpp  ijkplayer_napi.h  ijkplayer_napi_audio_init.cpp
ijkplayer/src/main/cpp/proxy/: ijkplayer_napi_proxy.c  ijkplayer_napi_proxy.cpp  ijkplayer_napi_proxy.h
ijkplayer/src/main/cpp/types/ijkplayer_audio_napi/: index.d.ts  oh-package.json5
ijkplayer/src/main/cpp/types/libijkplayer/: package.json
ijkplayer/src/main/cpp/utils/hashmap/: data_struct.h
ijkplayer/src/main/cpp/utils/napi/: napi_utils.cpp  napi_utils.h
ijkplayer/src/main/cpp/utils/ohoslog/: ohos_log.h
ijkplayer/src/main/ets/components/mainpage/: MainPage.ets
ijkplayer/src/main/ets/ijkplayer/: IjkMediaPlayer.ets
ijkplayer/src/main/ets/ijkplayer/callback/: OnBufferingUpdateListener.ets  OnCompletionListener.ets  OnErrorListener.ets  OnInfoListener.ets  OnPreparedListener.ets  OnSeekCompleteListener.ets  OnTimedTextListener.ets  OnVideoSizeChangedListener.ets
ijkplayer/src/main/ets/ijkplayer/common/: MessageType.ets
ijkplayer/src/main/ets/ijkplayer/utils/: IjkPlayerNapi.d.ets  LogUtils.ets  ijkplayer_napi.d.ets
